--- a/Programming/Third Term/Ex3/Ex3/Ex3/ViewCharacter.resx
+++ b/Programming/Third Term/Ex3/Ex3/Ex3/ViewCharacter.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="characterImg.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         R0lGODlhoAD6APcAAAAAAAsADXJpXzY0NVZQRyQhHq2emFJGRUoiJpCEgFtVXC4oJ1o0MxkRF4N2ckk8
         NjwcHmxjWx8VIMO3sHBFSWhdV1ZOUjMuMR4YG0o3MysfKE0sLZ6TjWFeaI1/eF5TUllORmNdZTYwLnxw
@@ -1987,7 +1987,7 @@
         ggno59fyW2CXcbzw7q9JomMf8cyR6mb36xFQZCXgguUA9Wg/aDnnAjXJdgKPAiM5dG83a2j/84AAADs=
 </value>
   </data>
-  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="factionImg.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAFQAAABUCAYAAAAcaxDBAAAAIGNIUk0AAHomAACAhAAA+gAAAIDoAAB1
         MAAA6mAAADqYAAAXcJy6UTwAAAAJcEhZcwAALiIAAC4iAari3ZIAAAAHdElNRQfoBB4OMwCNcP0ZAABB
