--- a/Programming/Third Term/Ex5/Ex5/Form1.resx
+++ b/Programming/Third Term/Ex5/Ex5/Form1.resx
@@ -123,6 +123,9 @@
   <metadata name="charCrud.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>24, 14</value>
   </metadata>
+  <metadata name="charCrud.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>24, 14</value>
+  </metadata>
   <metadata name="characterDataSet.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>127, 14</value>
   </metadata>
